# basheremesh

./: .gitignore  Makefile.am  Makefile.in  README  README.TXT  TODO  autogen.sh  config.h.in  configure  configure.ac
Makefile/: Makefile-02  Makefile-03  Makefile-04  Makefile-06  Makefile-07  circle.c  rectangle.c
Makefile-eg/: Makefile  Makefile-01  Makefile-05  Makefile-08  circle.h  rectangle.h  square.c  square.h
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
autotools/: README
autotools/proj/: Makefile.am  configure.ac
autotools/proj-000/: Makefile  foobar.h
autotools/proj-001/: Makefile.am  main.c
autotools/proj-002/: bar.c
autotools/proj-002/src/: Makefile  Makefile.am
autotools/proj-003/: configure.ac
autotools/proj-003/lib/: Makefile.am  Makefile.in
autotools/proj-003/src/: Makefile.am  foo.c
autotools/proj-004/: back.sh  configure.ac
autotools/proj-004/scripts/: Makefile.in
autotools/proj/lib/: Makefile.am  Makefile.in
autotools/proj/scripts/: Makefile  Makefile.am  hello.sh
autotools/proj/src/: Makefile.in  main.c
doc/: Makefile.am  Makefile.in  README
examples/: Makefile.am  Makefile.in
examples/Makefile-eg/: Makefile-00  Makefile-01  Makefile-02  Makefile-03  Makefile-04  Makefile-05  Makefile-06  Makefile-07  Makefile-08  Makefile-09  README  main.c
examples/shell/foosh/: Makefile.am  Makefile.in  foosh
examples/shell/foosh/.libs/: foosh
examples/shell/tests/: README
examples/snippets/: Makefile.am  Makefile.in  Makefile.orig  README  crash.c  fork.c  ioredir.c  ipipeline.c  loop.c  pipe.c  pipe2.c  pipeline.c  pthread.c  rpipeline.c  semaphore.c  setpgrp.c  signal.c  signal2.c
exercises/: Makefile.am  Makefile.in
exercises/runcmd/: Makefile.am  Makefile.in  README  runcmd.txt
exercises/runcmd/lib/: .#runcmd.c  Makefile.am  Makefile.in  all.tgz  runcmd.c
exercises/runcmd/test/: Makefile.am  Makefile.in  t.h  t1.c  t2.c  test-001.c  test-002.c  test-003.c  test-004.c  testutils.c  testutils.h
exercises/shell/: Makefile.am  Makefile.in  README
exercises/shell/foosh/: Makefile.am  Makefile.in  README  main.c
exercises/shell/tests/: Makefile.am  Makefile.in
extras/: Makefile.am  Makefile.in
extras/Makefile-templates/Makestyle/: README  foo.c
extras/Makefiles/: Makefile.bin+lib
extras/Makestyle/: Makefile  README
instructions/: README
lib/: Makefile.am  Makefile.in  core.c  list.c  parser.c
lib/posixeg/: core.h
pending/autotools/: README
pending/autotools/proj-000/: main.c
pending/autotools/proj-001/: configure.ac
pending/autotools/proj-002/: Makefile.am  configure.ac
pending/autotools/proj-002/src/: main.c
pending/autotools/proj-003/: Makefile.am  configure
pending/autotools/proj-003/lib/: Makefile.in
pending/autotools/proj-003/src/: Makefile.in
pending/autotools/proj-004/: Makefile.am  autogen.sh  configure.ac
pending/autotools/proj-004/lib/: Makefile.in
pending/autotools/proj-004/replace/: mybaz.c
pending/autotools/proj-004/scripts/: Makefile.in
pending/autotools/proj-004/src/: Makefile.am  Makefile.in
pending/rpc/: AUTHORS  client-01.c  client-03.c  client-04.c  client-05.c  foo.c  read_log.c  rpc-server-faulty.c  rpc-server-memoryc.c  rpc.config  rpc.h  stuff.c  stuff.h
rpc/: Makefile  Makefile-MacOS  client-01a.c  client-02.c  debug.h  increment.c  log-rpc.c  log.c  memory-rpc.c  memory.c  pi.c  plusone.c  rpc-client.c  rpc-server-faulty.c  rpc-server.c  stuff-rpc.c  stuff.c  stuff.h  write_log.c
runcmd/exercise/: Makefile  README  TODO  config.mk  delay  delay.d  foo  foo.c  foo.h  gendist.mk  headers.mk  io  io.c  io.d  local.mk  makefile  runcmd.c  runcmd.d  runcmd.h  runcmd.txt  segfault  segfault.d  t.h  t1.c  t1.h  t2.c  test-001.c  test-002.c  test-003.c  test-004.c  test-runcmd  test-runcmd.c  test-runcmd.d  test.mk  tests.mk  testutils.c  testutils.h
runcommand/: Makefile  REAMDE.TXT  debug.h  runcommand.c
runcommand/exercises/: README.TXT
runcommand/exercises/ex01/: Makefile  foo.h  runcommand.c  test-runcommand.c
runcommand/exercises/ex02/: Makefile  test-runcommand.c
runcommand/exercises/ex03/: Makefile  test-runcommand.c
runcommand/exercises/ex04/: test-runcommand.c
runcommand/exercises/ex05/: Makefile  delay.c  test-runcommand.c
shell/foosh/: Makefile  README  config.mk  foosh.h  foosh.txt  main.c  parser.c  utils.c
shell/tests/: README  README.TXT
snippets/: Makefile  README.TXT  crash.c  debug.h  eg-exec.c  eg-fork.c  eg-io-redirect.c  eg-pipe.c  eg-pipe2.c  eg-pipeline.c  eg-signal-better.c  eg-signal.c  exec.c  fork.c  io-redirect.c  loop.c  pipe.c  pipe2.c  pipeline.c  pthread.c  setpgrp.c  siginfo.c  signal-better.c  signal.c  signal2.c  toggle-io.c  toggle-output.c  token.c
tools/: Makefile.am  Makefile.in
tools/getprojs/: README  getprojs.sh
tools/lib/: Makefile.in
tools/lib/posixeg/: debug.h
utils/: AUTHORS  Makefile  copyrigh-header.txt  debug.h
utils/Makefine/: .foo  Makefile  README  config.mk  gendist.mk  out  test.mk
utils/Makefine/ls/: Makefile  config.mk
